HBASE-5439 Fix some performance findbugs issues (Gregory Chanan)
git-svn-id: https://svn.apache.org/repos/asf/hbase/trunk@1292141 13f79535-47bb-0310-9956-ffa450edef68